--- a/first-app/src/app/databinding/databinding.component.html
+++ b/first-app/src/app/databinding/databinding.component.html
@@ -6,3 +6,8 @@
 <input type="text" [value]="stringInterpolation">
 <p [ngClass]="{redborder: onTest()}">this is style?</p>
 <p [ngStyle]="{color: 'blue'}">this is style?</p>
+<h1>Custom Property binding</h1>
+<fa-property-binding [result]="10"></fa-property-binding>
+<hr>
+<h1>event binding</h1>
+<fa-event-binding></fa-event-binding>
