--- a/first-app/src/app/databinding/databinding.component.html
+++ b/first-app/src/app/databinding/databinding.component.html
@@ -10,4 +10,7 @@
 <fa-property-binding [result]="10"></fa-property-binding>
 <hr>
 <h1>event binding</h1>
-<fa-event-binding></fa-event-binding>
+<fa-event-binding (clicked)="onClicked($event)"></fa-event-binding>
+<hr>
+<h1>two-way binding</h1>
+<fa-two-way-binding></fa-two-way-binding>
